--- a/index.html
+++ b/index.html
@@ -137,5 +137,8 @@
         <img id="imagenExpandida" src="" alt="Expandida" />
       </div>
     </div>
+    <footer class="footer">
+  <p>&copy; 2025 Ritmos de Sangre - Caporales Huáscar Perú. Todos los derechos reservados.</p>
+</footer>
   </body>
 </html>
