--- a/index.html
+++ b/index.html
@@ -138,7 +138,10 @@
       </div>
     </div>
     <footer class="footer">
-    <p>&copy; 2025 Ritmos de Sangre - Caporales Huáscar Perú. Todos los derechos reservados.</p>
-  </footer>
+  <p>&copy; 2025 Ritmos de Sangre - Caporales Huáscar Perú. Todos los derechos reservados.</p>
+  <div class="footer-logo">
+    <img src="logo.png" alt="Logo pequeño de Ritmos de Sangre" />
+  </div>
+</footer>
 </body>
 </html>
