--- a/index.html
+++ b/index.html
@@ -141,7 +141,7 @@
    <footer class="footer">
     <p>&copy; 2025 Ritmos de Sangre - Caporales Huáscar Perú. Todos los derechos reservados.</p>
     <div class="footer-logo">
-      <img src="logo1.png" alt="Logo pequeño de Huáscar" />
+      <img src="logo.png" alt="Logo pequeño de Huáscar" />
     </div>
   </footer>
 </body>
